objects/FSL_Failure__c.object
<CustomObject>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Code__c</fullName>
        <label>Component Code</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_Family__c</fullName>
        <label>Engine Family</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Concatenation of Failure_Id__c, System_Code__c, Component_Code__c, and Service_Model_Name__c</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FSL_SMN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FSL SMN</label>
        <referenceTo>FSL_SMN_DTC__c</referenceTo>
        <relationshipLabel>Failure Codes</relationshipLabel>
        <relationshipName>Failure_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Failure_Id__c</fullName>
        <label>Failure Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failure_Mode__c</fullName>
        <label>Failure Mode</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failure_Name__c</fullName>
        <label>Failure Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modified_Date__c</fullName>
        <label>Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Model_Name__c</fullName>
        <label>Service Model Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Code__c</fullName>
        <label>System Code</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>Failure Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Failure_Name__c</columns>
        <columns>Failure_Mode__c</columns>
        <columns>System_Code__c</columns>
        <columns>Component_Code__c</columns>
        <columns>External_ID__c</columns>
        <columns>Engine_Family__c</columns>
        <columns>Failure_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Component_Code__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Engine_Family__c</columns>
        <columns>Failure_Id__c</columns>
        <columns>Failure_Mode__c</columns>
        <columns>Failure_Name__c</columns>
        <columns>External_ID__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>System_Code__c</columns>
        <columns>Service_Model_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>THAC</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>FSL Failure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Failure Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>